# health-data-monitoring-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: b2f2da3c7b47_initial_schema.py  be7af176c7e7_add_focus_system_and_user_memory_tables.py  ff714fd87494_add_conversation_logs_table.py
scripts/: seed_food_db.py  setup_garmin.py  setup_libre.py  start_beat.sh  start_worker.sh
src/: config.py  main.py
src/ai/: conversation.py  food_analyzer.py  intent_router.py  pattern_detector.py  recommender.py
src/ai/agents/: focus_agent.py  food_agent.py  general_agent.py  health_agent.py
src/api/routes/: dashboard.py  health.py  setup.py
src/api/webhooks/: garmin.py  (+2 more)
src/engine/: alert_engine.py  calorie_tracker.py  memory_manager.py  metabolic_profile.py  rules.py  user_context.py
src/ingestion/: food.py  garmin.py  libre.py
src/messaging/: dispatcher.py  telegram_client.py  throttler.py  whatsapp_client.py
src/models/: __init__.py  activity.py  alert.py  base.py  conversation.py  daily_summary.py  focus.py  food_response.py  glucose.py  meal.py  user.py  user_memory.py
src/static/: setup.html
src/tasks/: __init__.py  daily_summary.py  focus_tasks.py  libre_poller.py  meal_followup.py  pattern_analysis.py  weekly_report.py
src/utils/: formatters.py  glucose_math.py  nutrition_db.py
terraform/: main.tf
tests/: test_food_analyzer.py  test_glucose_math.py  test_metabolic_profile.py  test_pattern_detector.py  test_rules_engine.py  test_user_context.py
